# ChangeLog for dev-python/nbconvert
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  02 Sep 2015; Sean Vig <sean.v.775@gmail.com> nbconvert-9999.ebuild:
  dev-python/nbconvert: Add doc use flag

  27 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> nbconvert-9999.ebuild:
  dev-python/nbconvert: Fix deps

  25 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> nbconvert-9999.ebuild:
  dev-python/nbconvert: Fix deps for testing

*nbconvert-4.0.0 (12 Aug 2015)
*nbconvert-9999 (12 Aug 2015)

  12 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> +metadata.xml,
  +nbconvert-4.0.0.ebuild, +nbconvert-9999.ebuild:
  dev-python/nbconvert: Initial ebuild